--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "bootstrap/base.html" %}
-{% block title %} Steering behaviour {% endblock title %}
+{% block title %} Pendulum Card {% endblock title %}
 
 {% block head %}
 {{ super() }}
